Fixed contrast ratio issues (#184)

--- a/less/documentDB.less
+++ b/less/documentDB.less
@@ -1646,7 +1646,7 @@ p {
 }
 
 .contextual-pane .collid {
-    border: 1px solid #bbbbbb;
+    border: 1px solid #605e5c;
     font-size: 10px;
     padding: 5px 10px;
     color: #000;
@@ -2423,22 +2423,6 @@ a:link {
     display: none;
 }
 
-::-webkit-input-placeholder {
-    color: #969696;
-}
-
-::-moz-placeholder {
-    color: #969696;
-}
-
-:-ms-input-placeholder {
-    color: #969696;
-}
-
-:-moz-placeholder {
-    color: #969696;
-}
-
 ::-ms-expand {
     color: #969696;
 }
@@ -3022,3 +3006,7 @@ settings-pane {
 .warningErrorContent a {
     color: @AccentMediumHigh
 }
+
+.infoBoxContent a {
+    color: @AccentMediumHigh
+} 
